tests/NormalTests/paczka1/fuzzy1/25039451.err
Error in line 4: mHGZm5 S14 37,41
Error in line 2: mHGZm5 S267 52,3
Error in line 14: Yz1ruPDorN S902 95,81
Error in line 16: zK19FWgfEOw A548 81,09
Error in line 20: mHGZm5 S902 02,0
Error in line 22: zK19FWgfEOw A548 94,'
Error in line 5: 5RGVHb7eyi A548 81,6
Error in line 24: YRz475 S267 0,3
Error in line 30: S14 S902 99,7
Error in line 29: zK19FWgfEOw S14 78,4
Error in line 33: zK19FWgfEOw S902 21,3
Error in line 31: S14 S14 65,1
Error in line 23: Yz1ruPDorN S902 216,8
